# nirs4all-cluster

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSING.md  LICENSING_FR.md  PROTOTYPE_DESIGN.md  PROTOTYPE_TO_PRODUCTION.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WORKLOG.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
docs/: DISTRIBUTED_EXECUTION_DESIGN.md  cli-reference.md  conf.py  configuration.md  dashboard.md  index.md  installation.md  job-spec.md  operations.md  python-sdk.md  quickstart.md  rest-api.md  security-and-scope.md  versioning.md
docs/concepts/: architecture.md  job-decomposition.md
docs/design/: distributed-execution.md  index.md  licensing.md  prototype-design.md  prototype-to-production.md
docs/maintenance/: final_report.md  quality_gates.md  release_checklist.md  repository_audit.md
docs/maintenance/codex_reviews/: 01_initial_audit_review.md  03_main_diff_review.md  04_final_release_readiness_review.md
examples/: job.matrix.yaml  job.shared-path.yaml  job.uploaded-bundle.yaml
examples/pipelines/: pls.yaml
nirs4all_cluster/: __init__.py  cli.py  client.py  client_errors.py  client_transport.py  client_worker.py  logging_setup.py  schemas.py  versioning.py
nirs4all_cluster/runners/: __init__.py  nirs4all_run.py
nirs4all_cluster/server/: __init__.py  app.py  artifacts.py  auth.py  db.py  events.py  scheduler.py
nirs4all_cluster/server/static/: index.html
nirs4all_cluster/worker/: __init__.py  agent.py  executor.py  materialize.py
scripts/: secret_shape_guard.py  validation.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_client_errors.py  test_core_adapter.py  test_distributed_parity.py  test_integration_nirs4all.py  test_rbac.py  test_release_smoke.py  test_runtime_requirement_contract.py  test_scheduler.py  test_scheduler_shape_inference.py  test_secret_shape_guard.py  test_server_api.py  test_state_machine.py  test_versioning.py  test_worker.py
tests/e2e/: test_cluster_dag_rights_core_client.py
